--- a/index.html
+++ b/index.html
@@ -110,16 +110,37 @@
         border-radius: 16px;
         display: flex; flex-direction: column;
         overflow: hidden;
-        transition: transform var(--t) var(--ease);
+        transition: max-height 0.4s var(--ease), transform var(--t) var(--ease);
     }
     .panel-handle {
         display: none;
+        width: 100%; height: auto;
+        padding: 10px 0 4px;
+        background: none;
+        border: none;
+        cursor: pointer;
+        flex-shrink: 0;
+        -webkit-tap-highlight-color: transparent;
+    }
+    .panel-handle-bar {
         width: 32px; height: 3.5px;
         border-radius: 4px;
-        background: rgba(255,255,255,0.12);
-        margin: 10px auto 2px;
-        flex-shrink: 0;
+        background: rgba(255,255,255,0.16);
+        margin: 0 auto;
+        transition: background var(--t);
     }
+    .panel-handle:active .panel-handle-bar {
+        background: rgba(255,255,255,0.35);
+    }
+    .panel-chevron {
+        display: none;
+        font-size: 10px;
+        color: var(--text-3);
+        text-align: center;
+        margin-top: 2px;
+        transition: transform 0.3s var(--ease);
+    }
+    .panel.collapsed .panel-chevron { transform: rotate(180deg); }
     .panel-scroll {
         flex: 1; overflow-y: auto;
         padding: 0 22px 22px;
@@ -357,7 +378,8 @@
         .brand-text { font-size: 10px; letter-spacing: 2.5px; }
         .brand-sub { display: none; }
 
-        .panel-handle { display: block; margin: 8px auto 0; }
+        .panel-handle { display: flex; flex-direction: column; align-items: center; }
+        .panel-chevron { display: block; }
 
         .panel {
             position: fixed !important;
@@ -371,6 +393,17 @@
             border-radius: 14px 14px 0 0;
             border-bottom: none;
             padding-bottom: var(--safe-b);
+        }
+
+        /* ── COLLAPSED STATE ── */
+        .panel.collapsed {
+            max-height: 52px;
+        }
+        .panel.collapsed .panel-scroll {
+            display: none;
+        }
+        .panel.collapsed .tabs {
+            display: none;
         }
 
         .tabs { padding: 4px 14px 0; }
@@ -495,8 +528,11 @@
         <div class="brand-sub">Suitcase Configurator</div>
     </div>
 
-    <div class="panel">
-        <div class="panel-handle"></div>
+    <div class="panel" id="js-panel">
+        <button class="panel-handle" id="js-handle" aria-label="Toggle panel">
+            <div class="panel-handle-bar"></div>
+            <div class="panel-chevron">▲</div>
+        </button>
 
         <div class="tabs">
             <button class="tab on" data-tab="config">Configurator</button>
@@ -791,9 +827,18 @@ const App = (function () {
 
     document.getElementById('js-reset').addEventListener('click', _defaultCam);
 
+    // ── Mobile panel toggle ──
+    var panel = document.getElementById('js-panel');
+    document.getElementById('js-handle').addEventListener('click', function () {
+        if (mob) panel.classList.toggle('collapsed');
+    });
+
     window.addEventListener('resize', function () {
         var was = mob; mob = window.innerWidth <= 768;
-        if (was !== mob) _defaultCam();
+        if (was !== mob) {
+            _defaultCam();
+            panel.classList.remove('collapsed');
+        }
     });
 
     // ══════════════════════════════════════════════════════
