--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="panel" id="pnl">
         <button class="handle" id="hnd" aria-label="Toggle panel">
             <div class="handle-pill"></div>
-            <div class="handle-hint">▲</div>
+            <div class="handle-hint">▼</div>
         </button>
 
         <div class="tabs">
